# serialio

./: .gitignore  CMakeLists.txt  README.md
include/: serialio.h
src/: serialio.c
test/: test.c
